--- a/index.html
+++ b/index.html
@@ -4,9 +4,33 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" integrity="sha512-BnbUDfEUfV0Slx6TunuB042k9tuKe3xrD6q4mg5Ed72LTgzDIcLPxg6yI2gcMFRyomt+yJJxE+zJwNmxki6/RA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300;500&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/style.css">
+        <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
         <title>Todolist</title>
     </head>
     <body>
-        
+        <div class="screen-container">
+            <div id="app">
+                <header>
+                    <h1><i class="fas fa-th-list"></i> Todolist</h1>
+                    <div class="input-container">
+                        <input type="text"><i class="fas fa-plus-circle"></i>
+                    </div>
+                </header>
+                <main>
+                    <ul>
+                        <li v-for="task in tasks">
+                            <p>{{ task.taskName }}</p>
+                            <i class="far fa-times-circle"></i>
+                        </li>
+                    </ul>
+                </main>
+            </div>
+        </div>
+        <script src="js/script.js"></script>
     </body>
 </html>
