--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                 <header>
                     <h1><i class="fas fa-th-list"></i> Todolist</h1>
                     <div class="input-container">
-                        <input type="text"><i class="fas fa-plus-circle"></i>
+                        <input type="text" v-model="inputText" @keydown.enter="addTask"><i class="fas fa-plus-circle" @click="addTask"></i>
                     </div>
                 </header>
                 <main>
                     <ul>
-                        <li v-for="task in tasks">
-                            <p>{{ task.taskName }}</p>
-                            <i class="far fa-times-circle"></i>
+                        <li v-for="(task,index) in tasks">
+                            <span @click="reverseDone(index)" :class="(task.done) ? 'task-done' : ''">{{ task.taskName }}</span>
+                            <i class="far fa-times-circle" @click="removeTask(index)"></i>
                         </li>
                     </ul>
                 </main>
